--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
 </head>
 <body>
+    <?php
+        // PHP code goes here
+    ?>
     <header>
       <div class="container">
         <div class="header-left">
